<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:backgroundTint="@color/white"
    android:background="#E0F7FA"> <!-- Cor de fundo da tela, ajuste conforme necessário -->

    <!-- Título da seção -->
    <TextView
        android:id="@+id/reportTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report"
        android:layout_marginTop="44dp"
        android:layout_marginStart="15dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp" />

    <!-- Card Principal com a Frequência Cardíaca -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:background="@drawable/rounded_background"
        android:backgroundTint="@color/light_blue"
        android:padding="16dp"
        android:layout_margin="10dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frequ_ncia_card_aca"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0 bpm"
                android:id="@+id/myBpm"
                android:textSize="36sp"
                android:textStyle="bold"
                android:layout_marginTop="14dp" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:contentDescription="@string/gr_fico_fict_cio"
                android:src="@drawable/graf2" />
        </LinearLayout>
    </LinearLayout>

    <!-- Texto "Exames Feitos" -->
    <TextView
        android:id="@+id/examsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exames_feitos"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"/>

    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:id="@+id/search"
            app:iconifiedByDefault="false"
            app:searchHintIcon="@null"
            app:queryHint="Search..."
            android:focusable="false"
            android:background="@drawable/lavender_border"
            app:closeIcon="@drawable/baseline_clear_24"
            app:searchIcon="@drawable/baseline_search_24"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recyclerView"
            android:scrollbars="vertical"
            android:layout_marginTop="20dp"
            android:layout_below="@id/search"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fab"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="40dp"
            android:src="@drawable/baseline_add_24"
            android:backgroundTint="@color/lavender"
            app:tint = "@color/white"/>

    </RelativeLayout>
</LinearLayout>