<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment"
    android:background="@color/white">

    <View
        android:id="@+id/header_background"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/lavender"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="Configurações"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/expXML"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/custom_edittext"
        android:drawablePadding="8dp"
        android:letterSpacing="0.02"
        android:lineSpacingExtra="2dp"
        android:padding="10dp"
        android:text="@string/textao"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_background" />

    <TextView
        android:id="@+id/contato"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/contato"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/expXML"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/logout"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="Logout"
        app:layout_constraintTop_toTopOf="@id/contato"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/red"/>

    <TextView
        android:id="@+id/dev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/desenvolvido_por_eduardo_pazini"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
